<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <TextView
            android:id="@+id/edit_player_menu_title_text_view"
            style="@style/text_title"
            android:text="@string/edit_player" />

    <TextView
            android:id="@+id/edit_player_menu_name_text_view"
            style="@style/text_secondary"
            android:layout_below="@id/edit_player_menu_title_text_view"
            android:text="@string/name" />
    
    <EditText 
        android:id="@+id/edit_player_menu_name_edit_text"
        style="@style/edit_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_player_menu_name_text_view"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/edit_player_menu_button_save"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_size_small"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />

</RelativeLayout>