<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/choose_players_menu_title_text_view"
        style="@style/text_title"
        android:text="@string/choose_players" />

    <TextView
        android:id="@+id/choose_players_menu_button_new_player"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_players_menu_title_text_view"
        android:layout_margin="@dimen/margin_size_small"
        android:text="@string/new_player" />

    <ListView
        android:id="@+id/choose_players_menu_player_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_players_menu_button_new_player"
        android:layout_above="@+id/choose_players_menu_button_start_game"
        android:divider="@null"
        android:dividerHeight="@dimen/list_view_divider_height" />

    <TextView
        android:id="@id/choose_players_menu_button_start_game"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_size_small"
        android:text="@string/start_game"
        android:enabled="false" />

</RelativeLayout>